[metadata]
name = onisubscriptions
version = 0.0.2
author = Isaque Fernando et al.
author_email = isaque.fernando@onimusic.com.br
maintainer = Isaque Fernando et al.
maintainer_email = isaque.fernando@onimusic.com.br
description = Aplicativo para gestão de usuários e assinaturas dentro de aplicativos Django.
long_description = file: README.rst
url = https://www.onimusic.com.br/
license = MIT
keywords = django, authentication, users, subscriptions, payments
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
